tests/ui/cve_2020_35877/cve_2020_35877.stderr
error: it is unsound to dereference a pointer that is offset using an unchecked integer
  --> tests/ui/cve_2020_35877/cve_2020_35877.rs:49:13
   |
LL |     fn index(&self, idx: usize) -> &Self::Output {
   |                     --- offset passed in here
...
LL |             let mut p: *const T = self.data.lock().unwrap().ptr() as *const T;
   |                                   ------------------------------------------- pointer created here
...
LL |             &*p
   |             ^^^ dereferenced here
   |
   = help: check whether it's in bound before dereferencing
   = note: `#[deny(rpl::deref_unchecked_ptr_offset)]` on by default

error: aborting due to 1 previous error

